# DDR-Accelero

./: .gitattributes  .gitignore  ALIGNMENT_README.md  ALIGNMENT_VERIFICATION.md  ARROW_VISUALIZATION_README.md  BEFORE_AFTER_COMPARISON.md  CLASS_BALANCING_SUMMARY.md  CLI_GAMEPAD_RECORDER.md  CORRELATION_IMPROVEMENT_ANALYSIS.md  CORRELATION_INVESTIGATION.md  DATA_COLLECTION.md  EXPERIMENTS_PROPOSAL.md  FINAL_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_ANALYSIS.md  INPUT_DISCOVERY.md  MIGRATION_NOTES.md  PREDICTIONS_PROOF.md  PREDICTIONS_VERIFICATION.md  PREDICTION_COMPARISON.md  PR_SUMMARY.md  README.md  RESULTS.md  SECURITY_SUMMARY.md  SOLUTION_FOUND.md  SPEC.md  SUMMARY.md  TODO.md  TRAINING_PREDICTION_RESULTS.md  VALIDATION_RESULTS.md  VISUALIZATION_EXAMPLES.md  _codeql_detected_source_root  align_biomech.py  align_clean.py  align_density.py  align_energy.py  align_final.py  align_gyro.py  align_minimal.py  (+21 more)
.github/: copilot-instructions.md
android-collector/: README.md  gradlew  read_ddrbin.py  settings.gradle
android-tcp-streamer/: .gitignore  README.md  settings.gradle
artifacts/: trained_model.pth
c-pad-recorder/: CMakeLists.txt  DEBUGGING_GUIDE.md  Makefile  README.md  pad_recorder_dinput.c  pad_recorder_rawhid.c  pad_recorder_xinput.c
core/: __init__.py  align.py  dataset.py
docs/: GETTING_STARTED.md  README.md  _config.yml  app.js  index.html  index.md  inference.js  model.onnx  model.onnx.data  model.onnx.old  model_old.onnx  model_test_simple.onnx  sm-parser.js  styles.css  test.html  visualization.js  (+1 more)
(+95 files in other folders)
